kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: pacmangit
  name: pacmangit
  labels:
    app: pacmangit
spec:
  replicas: 2
  selector:
    matchLabels:
      name: pacmangit
  template:
    metadata:
      labels:
        name: pacmangit
    spec:
      serviceAccount: pacmangit
      containers:
      - image: docker.io/rfontain/pacman:v1
        imagePullPolicy: Always
        name: pacmangit
        ports:
        - containerPort: 8080
