kube/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pacman
  labels:
    app.kubernetes.io/part-of: pacman
    name: pacmangit
spec:
  to:
    kind: Service
    name: pacmangit
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
